src/objects/FYSQD__c.object
<CustomObject>
    <fields>
        <fullName>Abstract__c</fullName>
        <label>摘要</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>出差申请</label>
        <referenceTo>TravelRequest__c</referenceTo>
        <relationshipName>CC2sSb</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ApprovalFee__c</fullName>
        <label>批准费用</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CostItem__c</fullName>
        <label>费用项目</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>通 讯 费</fullName>
                </value>
                <value>
                    <fullName>市 内 交 通 费</fullName>
                </value>
                <value>
                    <fullName>境 内 差 旅 费</fullName>
                </value>
                <value>
                    <fullName>境 外 差 旅 费</fullName>
                </value>
                <value>
                    <fullName>办 公 费</fullName>
                </value>
                <value>
                    <fullName>福 利 费</fullName>
                </value>
                <value>
                    <fullName>培 训 费</fullName>
                </value>
                <value>
                    <fullName>租 赁 费</fullName>
                </value>
                <value>
                    <fullName>业 务 招 待 费</fullName>
                </value>
                <value>
                    <fullName>劳 务 费</fullName>
                </value>
                <value>
                    <fullName>会 议 费</fullName>
                </value>
                <value>
                    <fullName>咨 询 服 务 费</fullName>
                </value>
                <value>
                    <fullName>中 标 服 务 费</fullName>
                </value>
                <value>
                    <fullName>奖 金</fullName>
                </value>
                <value>
                    <fullName>邮 寄 费</fullName>
                </value>
                <value>
                    <fullName>社 保 金</fullName>
                </value>
                <value>
                    <fullName>市 场 推 广 费</fullName>
                </value>
                <value>
                    <fullName>工 资</fullName>
                </value>
                <value>
                    <fullName>售 后 维 修 费</fullName>
                </value>
                <value>
                    <fullName>广 告 费</fullName>
                </value>
                <value>
                    <fullName>运 杂 费</fullName>
                </value>
                <value>
                    <fullName>样 机 费</fullName>
                </value>
                <value>
                    <fullName>客 户 培 训 费</fullName>
                </value>
                <value>
                    <fullName>提 成</fullName>
                </value>
                <value>
                    <fullName>注 册 费</fullName>
                </value>
                <value>
                    <fullName>补 充 医 疗 保 险</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExpenditureIncurred__c</fullName>
        <label>发生费用</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>费用申请</label>
    <nameField>
        <displayFormat>FYSQ{yyyy}{000000}</displayFormat>
        <label>费用申请单编号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>费用申请</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>